@@ -1,7 +1,12 @@
 """Provide the AuthenticatorInfo class.
 """
 
-from collections import Sequence
+try:
+    # Python 3.3 and newer
+    from collections.abc import Sequence
+except ImportError:
+    # Python 2
+    from collections import Sequence
 
 
 __all__ = ['AuthenticatorInfo', 'LegacyAuthenticatorInfo']
